package ar.edu.utn.frba.dds.fuentes;

import ar.edu.utn.frba.dds.clientes.ClienteDemo;
import ar.edu.utn.frba.dds.dominio.Coleccion;
import ar.edu.utn.frba.dds.dominio.Hecho;
import ar.edu.utn.frba.dds.dtos.ParametrosConsulta;
import ar.edu.utn.frba.dds.repositorios.RepositorioColecciones;
import org.joda.time.LocalDateTime;
import java.util.ArrayList;
import java.util.List;
import java.util.stream.Collectors;
import java.util.stream.Stream;

public class FuenteDemo implements FuenteProxy {
  protected ClienteDemo cliente;
  private final String direccionApi;
  private LocalDateTime ultimaConsulta;
  private List<Hecho> cacheHechos;
  private final RepositorioColecciones repo;

  public FuenteDemo(ClienteDemo cliente, String direccionApi,  RepositorioColecciones repo) {
    this.cliente = cliente;
    this.direccionApi = direccionApi;
    this.ultimaConsulta = null;
    this.cacheHechos = new ArrayList<>();
    this.repo = repo;
  }

  //cada una hora
  @Override
  public ArrayList<Hecho> cargarHechos(ParametrosConsulta parametros) {
    if (pasoUnaHoraDesdeUltimaConsulta()) {
      cacheHechos = cliente.traerHechos(direccionApi);
      ultimaConsulta = LocalDateTime.now();
    }
    Stream<Hecho> stream = cacheHechos.stream();
    if (parametros.getColeccionId() != null) {
      Coleccion coleccion = repo.buscarPorHandle(parametros.getColeccionId());
      stream = stream.filter(coleccion::hechoPertenece);
    }
    return stream.collect(Collectors.toCollection(ArrayList::new));
  }

  boolean pasoUnaHoraDesdeUltimaConsulta() {
    return ultimaConsulta == null || LocalDateTime.now().isAfter(ultimaConsulta.plusHours(1));
  }

  //METODO PARA TESTEAR NECESITO FORZAR O SIMULAR QUE SE PASO UNA HORA
  public void forzarExpiracionCache() {
    ultimaConsulta = LocalDateTime.now().minusHours(2); // Simula que pasó más de una hora
  }
}
