@startuml
skinparam classAttributeIconSize 0
left to right direction
skinparam linetype ortho

' ==========[ Fuentes ]==========
package "Fuentes" {
  interface Fuente {
    + cargarHechos(ParametrosConsulta): ArrayList<Hecho>
  }

  abstract class FuenteProxy {
    + cargarHechos(ParametrosConsulta): ArrayList<Hecho>
  }

  class FuenteDinamica {
    - hechosDinamicos: ArrayList<HechoDinamico>
    + subirHecho(...)
    + eliminarHecho(hecho: HechoDinamico)
    + solicitarModificarHecho(hechoOriginal: HechoDinamico, hechoNuevo: HechoDinamico, textoArg: String)
    + puedeModificar(hecho: HechoDinamico, contribuyente)
  }

  class FuenteEstatica {
    - pathArchivo: String
    - categoria: String
    - campos: ArrayList<String>
  }

  class FuenteDemo {
    - cliente: ClienteDemo
    - direccionApi: String
    - ultimaConsulta: LocalDateTime
    - cacheHechos: List<Hecho>
    - repo: RepositorioColecciones
    + cargarHechos(parametros: ParametrosConsulta): ArrayList<Hecho>
    + forzarExpiracionCache()
  }

  class FuenteMetaMapa {
    - cliente: ClienteMetaMapa
    - urlBase: String
    + cargarHechos(parametros: ParametrosConsulta): ArrayList<Hecho>
    + enviarSolicitudEliminacion(url: String, solicitud: SolicitudEliminacion)
  }

  class ServicioAgregacion {
    - fuentesQueConsidera: List<Fuente>
    - cacheDeHechos: ArrayList<Hecho>
    + actualizarCache(): void
    + cargarHechos(parametros: ParametrosConsulta): ArrayList<Hecho>
  }

  FuenteDinamica ..|> Fuente
  FuenteEstatica ..|> Fuente
  ServicioAgregacion ..|> Fuente
  FuenteProxy ..|> Fuente
  FuenteDemo --|> FuenteProxy
  FuenteMetaMapa --|> FuenteProxy
}

' ==========[ Modelo de Hechos ]==========
package "Modelo de Hechos" {
  abstract class Hecho {
    - id: String
    - titulo: String
    - descripcion: String
    - categoria: String
    - latitud: double
    - longitud: double
    - fechaAcontecimiento: LocalDate
    - fechaCarga: LocalDate
    - origen: Origen
    - visible: boolean
    - consensuado: boolean
    - solicitudes: List<SolicitudEliminacion>
  }

  class HechoDinamico {
    - contribuyente: Contribuyente
    + estaDentroDePlazo(): boolean
  }

  class Contribuyente {
    - id: Integer
    - edad: Integer
    - nombre: String
    - apellido: String
  }

  enum Origen {
    CARGAMANUAL
    DATASET
    CONTRIBUYENTE
    SERVICIOEXTERNO
  }

  Hecho <|-- HechoDinamico
  Hecho "1" --> "1" Origen
  HechoDinamico "1" --> "1" Contribuyente
}

' ==========[ Solicitudes ]==========
package "Solicitudes" {
  abstract class Solicitud {
    - estado: EstadoSolicitud
    - hecho: Hecho
    + aceptar()
    + rechazar()
    + aplicarAceptacion()
    + aplicarRechazo()
  }

  class SolicitudEliminacion {
    - textoFundamentacion: String
  }

  class SolicitudModificacion {
    - sugerenciaModificacion: String
    - hechoModificado: Hecho
  }

  class SolicitudSubida {
    - sugerenciaModificacion: String
  }

  enum EstadoSolicitud {
    PENDIENTE
    ACEPTADA
    RECHAZADA
  }

  Solicitud <|-- SolicitudEliminacion
  Solicitud <|-- SolicitudModificacion
  Solicitud <|-- SolicitudSubida
  Solicitud "1" --> "1" EstadoSolicitud
  Solicitud "*" --> "1" Hecho
}

' ==========[ Filtros ]==========
package "Filtros" {
  interface Filtro {
    + cumple(hecho: Hecho): boolean
  }

  class FiltroCategoria {
    - categoria: String
  }

  class FiltroFecha {
    - fechaBuscada: LocalDate
  }

  class FiltroUbicacion {
    - latitudMin: Double
    - latitudMax: Double
    - longitudMin: Double
    - longitudMax: Double
  }

  FiltroCategoria ..|> Filtro
  FiltroFecha ..|> Filtro
  FiltroUbicacion ..|> Filtro
}

' ==========[ Consenso y Navegación ]==========
package "Consensos y Navegacion" {
  interface AlgoritmoConsenso {
    + tieneConsenso(hecho: Hecho, fuentes: List<Fuente>)
  }

  class ConsensoDefault
  class ConsensoAbsoluto
  class ConsensoMayoriaSimple
  class ConsensoMultiplesMenciones

  enum ModoNavegacion {
    IRRESTRICTA
    CURADA
  }

  AlgoritmoConsenso <|.. ConsensoDefault
  AlgoritmoConsenso <|.. ConsensoAbsoluto
  AlgoritmoConsenso <|.. ConsensoMayoriaSimple
  AlgoritmoConsenso <|.. ConsensoMultiplesMenciones
}

' ==========[ Colección ]==========
class Coleccion {
  - titulo: String
  - descripcion: String
  - fuente: Fuente
  - criterioPertenencia: Filtro
  - modoNavegacion: ModoNavegacion
  - algoritmoConsenso: AlgoritmoConsenso
  + contiene(hecho: Hecho): boolean
  + ejecutarAlgoritmo(hechos: List<Hecho>)
}

Coleccion "*" --> "1" Fuente
Coleccion "*" --> "*" Filtro
Coleccion "*" --> "*" Hecho
Coleccion "*" --> "1" ModoNavegacion
Coleccion "*" --> "1" AlgoritmoConsenso

@enduml
